--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,85 @@ body {
     display: flex;
 }
 
+#visible-text {
+    font-size: 1rem;
+    line-height: 1.5rem;
+}
+
+#invisible-text {
+    font-size: 1.5rem;
+    line-height: 3rem;
+}
+
+@media only screen and (min-width: 1025px) {
+    #visible-text {
+        font-size: 1rem;
+        line-height: 1.5rem;
+    }
+
+    #invisible-text {
+        font-size: 1.5rem;
+        line-height: 3rem;
+    }
+}
+@media only screen and (min-width: 1279px) {
+    #visible-text {
+        font-size: 1rem;
+        line-height: 1.5rem;
+    }
+
+    #invisible-text {
+        font-size: 1.5rem;
+        line-height: 3rem;
+    }
+}
+@media only screen and (min-width: 1366px) {
+    #visible-text {
+        font-size: 1.25rem;
+        line-height: 1.8rem;
+    }
+
+    #invisible-text {
+        font-size: 2rem;
+        line-height: 3.5rem;
+    }
+}
+
+@media only screen and (min-width: 1439px) {
+    #visible-text {
+        font-size: 1.5rem;
+        line-height: 2.5rem;
+    }
+
+    #invisible-text {
+        font-size: 2.5rem;
+        line-height: 4rem;
+    }
+}
+
+@media only screen and (min-width: 1681px) {
+    #visible-text {
+        font-size: 2rem;
+        line-height: 3rem;
+    }
+
+    #invisible-text {
+        font-size: 3rem;
+        line-height: 5rem;
+    }
+}
+@media only screen and (min-width: 1924px) {
+    #visible-text {
+        font-size: 2.5rem;
+        line-height: 4rem;
+    }
+
+    #invisible-text {
+        font-size: 4rem;
+        line-height: 6rem;
+    }
+}
+
 .f-col {
     display: flex;
     flex-direction: column;
